--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 asgiref==3.7.2
-backports.zoneinfo;python_version<"3.9"
 certifi==2023.11.17
 Django==4.2.7
 geojson==3.1.0
+networkx==3.2.1
 pyproj==3.5.0
 sqlparse==0.4.4
 typing_extensions==4.8.0
